Refactor extension core functionality and TypeScript configuration
- Updated manifest.json to include scripting permission
- Modified tsconfig.json to adjust TypeScript compilation settings
- Removed background.js and contentScript.js, likely preparing for a new implementation
- Updated Login and OTP pages to use onKeyUp instead of onKeyPress

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
   "permissions": [
     "storage",
     "contextMenus",
-    "clipboardWrite"
+    "clipboardWrite",
+    "scripting"
   ],
   "background": {
     "service_worker": "background.js",
