--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ package-lock.json
 # Production
 dist
 build
+releases
+screenshots
 
 # Testing
 coverage
@@ -32,3 +34,4 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw? 
+
