--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,10 @@
     "type": "module"
   },
   "content_scripts": [{
-    "matches": ["<all_urls>"],
+    "matches": [
+      "http://*/*",
+      "https://*/*"
+    ],
     "js": ["contentScript.js"]
   }],
   "content_security_policy": {
@@ -31,6 +34,7 @@
   },
   "web_accessible_resources": [{
     "resources": ["icons/*"],
-    "matches": ["<all_urls>"]
-  }]
+    "matches": ["chrome-extension://*/*"]
+  }],
+  "host_permissions": []
 }
