--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.228",
@@ -21,8 +22,10 @@
   },
   "scripts": {
     "dev": "vite build --watch --mode development",
+    "dev:firefox": "vite build --watch --mode firefox",
     "build": "tsc && vite build --mode production",
+    "build:firefox": "tsc && vite build --mode firefox",
     "preview": "vite preview",
     "clean": "rm -rf dist"
   }
-} 
+}
