--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Qwacky",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Qwacky is an open source client for DuckDuckGo Email Protection, To manage and generate @duck.com aliases. ",
   "browser_specific_settings": {
     "gecko": {
@@ -25,21 +25,35 @@
     "activeTab"
   ],
   "background": {
-    "scripts": ["browser-polyfill.js", "background.js"],
+    "scripts": [
+      "browser-polyfill.js",
+      "background.js"
+    ],
     "type": "module"
   },
-  "content_scripts": [{
-    "matches": [
-      "http://*/*",
-      "https://*/*"
-    ],
-    "js": ["browser-polyfill.js", "contentScript.js"]
-  }],
+  "content_scripts": [
+    {
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "js": [
+        "browser-polyfill.js",
+        "contentScript.js"
+      ]
+    }
+  ],
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
   },
-  "web_accessible_resources": [{
-    "resources": ["icons/*"],
-    "matches": ["*://*/*"]
-  }]
-} 
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "icons/*"
+      ],
+      "matches": [
+        "*://*/*"
+      ]
+    }
+  ]
+}
