--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qwacky",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -16,16 +16,21 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^4.9.5",
-    "vite": "^4.2.0"
+    "vite": "^6.2.2"
   },
   "scripts": {
+    "predev": "node scripts/update-version.js",
     "dev": "vite build --watch --mode development",
+    "predev:firefox": "node scripts/update-version.js",
     "dev:firefox": "vite build --watch --mode firefox",
+    "prebuild": "node scripts/update-version.js",
     "build": "tsc && vite build --mode production",
+    "prebuild:firefox": "node scripts/update-version.js",
     "build:firefox": "tsc && vite build --mode firefox",
     "preview": "vite preview",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "update-version": "node scripts/update-version.js"
   }
 }
