--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "qwacky",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "type": "module",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^10.1.0",
     "styled-components": "^5.3.9",
     "webextension-polyfill": "^0.12.0"
   },
