更新权限设置，添加对标签页的访问权限；在应用中引入国际化支持，更新多个组件以支持多语言；修复部分文本以提高用户体验。

--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -13,7 +13,8 @@
     "default_icon": "assets/icons/qwacky.png"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ],
   "optional_permissions": [
     "contextMenus",
